# indexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.indexer-broker  Dockerfile.indexer-service-rs  README.md
.github/: renovate.json5
.github/workflows/: ci.yml  containers.yml  licenses.yml
common/: Cargo.toml
common/src/: address.rs  allocations.rs  escrow_accounts.rs  indexer_errors.rs  indexer_service.rs  lib.rs  signature_verification.rs  subgraph_client.rs  tap.rs  test_vectors.rs
common/src/allocations/: mod.rs  monitor.rs
common/src/attestations/: dispute_manager.rs  signer.rs  signers.rs
common/src/indexer_service/: http.rs  request_handler.rs  service.rs  static_subgraph.rs
common/src/indexer_service/http/: config.rs  indexer_service.rs  request_handler.rs  static_subgraph.rs  tap_receipt_header.rs
common/src/subgraph_client/: client.rs  monitor.rs
common/src/tap/: receipt_store.rs
common/src/tap/checks/: allocation_eligible.rs  deny_list_check.rs  receipt_max_val_check.rs  sender_balance_check.rs  timestamp_check.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs
indexer-broker/: Cargo.toml
indexer-broker/src/: config.rs  main.rs  service.rs
indexer-broker/src/routes/: cost.rs  status.rs
service/: Cargo.toml
service/src/: config.rs  database.rs  error.rs  routes.rs  service.rs
service/src/routes/: cost.rs  status.rs
tap-agent/src/: agent.rs  config.rs  main.rs
tap-agent/src/agent/: sender_account.rs  sender_accounts_manager.rs  sender_allocation.rs  sender_fee_tracker.rs
tap-agent/src/tap/: escrow_adapter.rs  test_utils.rs
tap-agent/src/tap/context/: rav.rs  receipt.rs
