[package]
name = "indexer-common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7", features = ["serde"] }
alloy-sol-types = "0.7"
anyhow = "1.0.75"
arc-swap = "1.6.0"
async-trait = "0.1.74"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
axum = { version = "0.7.5", default-features = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
build-info = "0.0.37"
ethers = "2.0.10"
ethers-core = "2.0.10"
eventuals = "0.6.7"
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
regex = "1.7.1"
reqwest = "0.12"
secp256k1 = { version = "0.29.0", features = ["recovery"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["arbitrary_precision"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "time",
] }
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "483a712", version = "1.0.0" }
thegraph-core = { version = "0.5.2", features = ["subgraph-client"] }
thegraph-graphql-http = { version = "0.2.1", features = ["http-client-reqwest"] }
thiserror = "1.0.49"
tower_governor = "0.4.0"
tokio = { version = "1.32.0", features = ["full", "macros", "rt"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["trace", "cors", "normalize-path"] }
tracing = "0.1.40"

[dev-dependencies]
env_logger = "0.11.0"
serde_test = "1.0.176"
test-log = "0.2.12"
wiremock = "0.6.0"
